--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,15 @@
 #background{
     width: 100%;
-    height:742px;
+    height:700px;
     position: relative;
 }
 #background_img img{
     width: 100%;
+    /*position: absolute;*/
+    /*top: 0;*/
+    /*right: 0;*/
+    /*left: 0;*/
+    /*bottom: 0;*/
     float: left;
     display: none;
 }
@@ -14,7 +19,7 @@
 #background_list{
     position: absolute;
     left: 150px;
-    bottom:120px;
+    bottom:100px;
 }
 #background_list li{
     width: 50px;
@@ -28,17 +33,17 @@
 #background_list .selected{
     background:orange;
 }
-#sorrn{
+#background_sorrn{
     position: absolute;
     right: 150px;
     bottom: 100px;
 }
-#sorrn #prev,#sorrn #next{
+#background_sorrn #prev,#background_sorrn #next{
     display: inline-block;
     margin-right:10px;
     width: 50px;
     height: 50px;
-    background:red;
+    background:orange;
     text-align: center;
     color: white;
     line-height: 50px;
