--- a/css/index.css
+++ b/css/index.css
@@ -49,3 +49,15 @@
     line-height: 50px;
     cursor: pointer;
 }
+#nav #logo_one{
+    display: inline-block;
+    background:url("../img/logol1.jpg")center no-repeat;
+    width: 100px;
+    height: 100px;
+}
+#nav #logol_two{
+    display: inline-block;
+    width: 300px;
+    height: 100px;
+    background: orange;
+}
