--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,5 @@
 #background{
+    z-index:2;
     width: 100%;
     height:483px;
     position: relative;
@@ -8,6 +9,13 @@
     height: 100%;
     float: left;
     display: none;
+}
+#background_word{
+    font-size: 20px;
+    line-height:30px;
+    position: absolute;
+    top: 80px;
+    right: 150px;
 }
 #background_img .selected{
     display: block;
@@ -47,7 +55,14 @@
     line-height:35px;
     cursor: pointer;
 }
+#music{
+    z-index:3;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+}
 #nav{
+    z-index:3;
     background:darkgreen;
     border:solid 1px darkgreen;
     border-radius: 5px;
@@ -59,7 +74,7 @@
 #nav #logol_one{
     float: left;
     /*background:url("../img/logol1.jpg")center no-repeat;*/
-    width: 80%;
+    width: 85%;
     border-radius:5px;
     height:50px;
     text-align: center;
@@ -68,17 +83,66 @@
 }
 #nav #logol_two{
     float: left;
-    width:12%;
+    width:10%;
     margin-top:10px;
     border-radius:5px;
     border:solid 1px darkgrey;
     height: 30px;
     background:darkred;
+    cursor: pointer;
 }
 #nav .menu{
-    z-index: 10;
     display: block;
-    width: 20px;
-    height: 5px;
-    color:yellow;
+    margin-top:6px;
+    margin-left:8px;
+    margin-right:8px;
+    height: 2px;
+    background:darkgrey;
+}
+#intro{
+    width: 40%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom:0;
+}
+#intro img{
+    z-index:1;
+    width: 100%;
+
+}
+#intro #first{
+    /*z-index:2;*/
+    width: 300px;
+    height:180px;
+    font-size: 35px;
+    color:darkgreen;
+    text-align: center;
+    line-height: 190px;
+    border-bottom: solid 5px darkred;
+    border-right: solid 5px darkred;
+    /*border: solid 3px darkgrey;*/
+    position:absolute;
+    bottom: 30px;
+    right: 40px;
+}
+
+#intro2{
+    float: right;
+    width: 60%;
+    height:50px;
+    background:darkgreen;
+}
+#intro2 .item{
+    display: inline-block;
+    width: 19%;
+    margin-left:2px;
+    height:50px;
+    text-align: center;
+    line-height: 50px;
+    cursor: pointer;;
+}
+#content{
+    width: 60%;
+    float: right;
 }
