--- a/css/index.css
+++ b/css/index.css
@@ -148,14 +148,15 @@
     width: 60%;
     float: right;
     background:gainsboro;
-    border-bottom:solid 2px darkred;
+    border-bottom:solid 2px darkgreen;
+    padding-bottom:30px;
 
 }
-#content #content_word{
+.content_word{
     line-height:45px;
     float: left;
 }
-#content_word .htll{
+.content_word .htll{
     display: inline-block;
     margin-top:6px;
     margin-left:6px;
@@ -163,7 +164,7 @@
     width:120px;
     background:darkred;
 }
-#content_word .htll2{
+.content_word .htll2{
     display: block;
     width: 0;
     margin-left:110px;
@@ -172,7 +173,7 @@
     border-left:solid 8px gainsboro;
     border-bottom:solid 8px gainsboro;
 }
-#content_word h1{
+.content_word h1{
     display: block;
     width: 180px;
     margin-left:30px;
@@ -180,7 +181,7 @@
     border-bottom:solid 3px darkgreen;
     /*border-top:solid 8px yellow;*/
 }
-#content_word #photo{
+.content_word #photo{
     width: 220px;
     height: 300px;
     background:url("../img/lalla.jpg") center no-repeat;
@@ -207,6 +208,7 @@
     float: left;
     text-align: center;
     line-height: 30px;
+    cursor: pointer;
 }
 #person .intro2{
     display: block;
@@ -216,10 +218,71 @@
     float: left;
     text-align: center;
     line-height:30px;
+    cursor: pointer;
+}
+#services{
+    width: 60%;
+    float: right;
+    background:gainsboro;
+    padding-bottom:80px;
+    border-bottom: solid 2px darkgreen;
+
+}
+#services_side{
+    width:100%;
+    background:gainsboro;
+    overflow: hidden;
+
+
+
+}
+#services_side .side{
+    width: 28%;
+    height: 200px;
+    margin-top: 40px;
+    margin-left:20px;
+    background:darkgreen;
+    float: left;
+}
+.side .title{
+    height:40px;
+    background:darkred;
+    color:darkgrey;
+    text-align: center;
+    line-height: 40px;
+}
+.side h4{
+    margin-top: 4px;
+    text-align: center;
+}
+.side span{
+    display: block;
+    font-size:11px;
+    margin-top:15px;
+    margin-left:5px;
+    margin-right:5px;
+    text-align: center;
 }
 #skill{
     width: 60%;
     float: right;
-    background:yellow;
+    background:pink;
 
+
+}
+#skill #skill_contain{
+    width: 100%;
+    overflow: hidden;
+}
+#skill .skill_spect{
+    width: 100%;
+    height:150px;
+    background:yellow;
+    margin:40px 30px;
+}
+.skill_spect .circle{
+    display: block;
+    width: 150px;
+    height: 150px;
+    background: orange;
 }
