--- a/css/index.css
+++ b/css/index.css
@@ -129,6 +129,7 @@
 }
 
 #intro2{
+    z-index:5;
     float: right;
     width: 60%;
     height:50px;
@@ -155,6 +156,7 @@
 .content_word{
     line-height:45px;
     float: left;
+
 }
 .content_word .htll{
     display: inline-block;
@@ -221,6 +223,7 @@
     cursor: pointer;
 }
 #services{
+    z-index: 5;
     width: 60%;
     float: right;
     background:gainsboro;
@@ -264,9 +267,11 @@
     text-align: center;
 }
 #skill{
+    z-index: 5;
     width: 60%;
     float: right;
     background:gainsboro;
+    border-bottom: solid 2px darkgreen;
 
 
 }
@@ -277,15 +282,12 @@
 #skill .skill_spect{
     width: 100%;
     height:150px;
-    /*border:solid 1px darkgreen;*/
-    background:yellow;
     margin:20px 30px;
 }
 .skill_spect .circle{
     display: block;
     width: 150px;
     height: 150px;
-    background: orange;
     float: left;
     position: relative;
 }
@@ -308,7 +310,6 @@
     width: 200px;
     height: 30px;
     margin-top:7px;
-    background:green;
     float: left;
     font-size: 13px;
     overflow: hidden;
@@ -335,4 +336,120 @@
     width:85%;
     height: 10px;
     background:darkred;
+}
+#item{
+    z-index: 5;
+    width: 60%;
+    float: right;
+    background:gainsboro;
+    border-bottom: solid 2px darkgreen;
+
+
+}
+#contact_me{
+     width: 60%;
+     float: right;
+     background:darkgreen;
+ }
+#contact_me h4{
+    margin:20px 20px 10px;
+    /*border-bottom: solid 2px darkred;*/
+}
+#find_me span{
+    margin-left:20px;
+    display: block;
+    width: 30%;
+    border:solid 1px darkred;
+}
+#find_me{
+    width: 30%;
+    float: left;
+}
+
+#find_me #content_logol{
+    display:block;
+    width: 90%;
+    margin-left:10%;
+    float: left;
+}
+#find_me #content_logol li{
+    display: block;
+    width: 30px;
+    height: 30px;
+    border-radius:50%;
+    margin:10px 3px;
+    background: darkred;
+    text-align: center;
+    color: white;
+    float: left;
+}
+#contact_info{
+    width: 30%;
+    float: left;
+}
+#contact_info span{
+    margin-left:20px;
+    display: block;
+    width: 30%;
+    border:solid 1px darkred;
+}
+#contact_info a{
+    font-size: 12px;
+    margin-left:22px;
+    color: darkgrey;
+}
+#suggestion{
+    width: 30%;
+    float: left;
+}
+#suggestion span{
+    margin-left:20px;
+    display: block;
+    width: 30%;
+    border:solid 1px darkred;
+}
+#suggestion #frame{
+    width: 80%;
+    height: 70px;
+    margin-top:5px;
+    margin-left:20px;
+    -webkit-border-radius:2px;
+    -moz-border-radius:2px;
+    border-radius:2px;
+    color: darkgrey;
+
+}
+#suggestion #sub{
+    font-size:10px;
+    color: darkgrey;
+    margin-top:5px;
+    margin-left:20px;
+}
+#register{
+    z-index:1;
+    width: 60%;
+    float: right;
+    height:100px;
+    position: relative;
+    background:black;
+    opacity: 0.8;
+}
+#register_text{
+    margin-top:10px;
+    color: darkgrey;
+}
+#register a{
+    text-decoration: none;
+    font-size:12px;
+    color: darkgrey;
+}
+#register #top{
+    width: 40px;
+    height: 40px;
+    border-radius: 4px;
+    position: absolute;
+    bottom: 5px;
+    right: 5px;
+    background:url("../img/timg.jpg") center no-repeat;
+    background-size: contain;
 }
