--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,13 @@
     padding:0;
     text-decoration: none;
 }
-body{
-    position: relative;
+html,body{
+    width: 100%;
+    height: 100%;
 }
+/*body{*/
+    /*position: relative;*/
+/*}*/
 li{
     list-style: none;
 }
