--- a/css/index.css
+++ b/css/index.css
@@ -188,7 +188,7 @@
 .content_word #photo{
     width: 220px;
     height: 300px;
-    background:url("../img/lalla.jpg") center no-repeat;
+    background:url("../img/person.jpg") center no-repeat;
     background-size: contain;
     margin-left:30px;
     margin-top:20px;
