--- a/css/index.css
+++ b/css/index.css
@@ -20,11 +20,16 @@
     display: none;
 }
 #background_word{
-    font-size: 20px;
-    line-height:30px;
+    font-size: 45px;
+    font-weight: 300;
+    line-height:60px;
     position: absolute;
-    top: 80px;
-    right: 150px;
+    top: 300px;
+    left: 300px;
+    color: #15c6ff;
+    background-image: -webkit-gradient(linear, 0 0, 0 bottom, from(rgb(21, 198, 255)), to(rgb(30, 19, 51)));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 #background_img .selected{
     display: block;
@@ -112,21 +117,6 @@
     float: left;
 
 }
-#intro #first{
-    /*z-index:2;*/
-    width: 300px;
-    height:180px;
-    font-size: 35px;
-    color:white;
-    text-align: center;
-    line-height: 190px;
-    border-bottom: solid 5px #21c2de;
-    border-right: solid 5px #21c2de;
-    /*border: solid 3px darkgrey;*/
-    position:absolute;
-    bottom: 30px;
-    right: 40px;
-}
 
 #intro2{
     z-index:5;
@@ -135,7 +125,7 @@
     height:50px;
     background:#21c2de;
 }
-#intro2 .item1,.item2,.item3,.item4,.item5,.item6{
+#intro2 #item1,#item2,#item3,#item4,#item5,#item6{
     display: inline-block;
     width: 19%;
     margin-left:2px;
@@ -164,16 +154,16 @@
     display: inline-block;
     margin-top:6px;
     margin-left:6px;
-    color: darkgrey;
+    color: #2973a9;
     width:120px;
-    background:darkred;
+    background: #e18e2f;
 }
 .content_word .htll2{
     display: block;
     width: 0;
     margin-left:110px;
-    border-top:solid 8px darkred;
-    border-right:solid 8px darkred;
+    border-top:solid 8px #e18e2f;
+    border-right:solid 8px #e18e2f;
     border-left:solid 8px gainsboro;
     border-bottom:solid 8px gainsboro;
 }
@@ -190,16 +180,17 @@
     height: 300px;
     background:url("../img/person.jpg") center no-repeat;
     background-size: contain;
-    margin-left:30px;
+    margin-left:60px;
     margin-top:20px;
 }
 #content #person{
-    width: 230px;
+    width: 400px;
     float: right;
-    font-size:10px;
+    background: red;
+    font-size:20px;
     line-height: 25px;
     margin-top: 130px;
-    margin-right:80px;
+    margin-right:100px;
     padding:20px;
     /*text-align:center;*/
 
