--- a/css/index.css
+++ b/css/index.css
@@ -31,6 +31,18 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+@keyframes flash {
+    0% {
+        visibility: visible;
+    }
+    100% {
+        visibility: hidden;
+    }
+}
+#background_word:after {
+    content: "_";
+    animation: flash .6s steps(2, start) infinite;
+}
 #background_img .selected{
     display: block;
 }
