--- a/css/index.css
+++ b/css/index.css
@@ -24,8 +24,8 @@
     font-weight: 300;
     line-height:60px;
     position: absolute;
-    top: 300px;
-    left: 300px;
+    top: 40%;
+    left: 10%;
     color: #15c6ff;
     background-image: -webkit-gradient(linear, 0 0, 0 bottom, from(rgb(21, 198, 255)), to(rgb(30, 19, 51)));
     -webkit-background-clip: text;
@@ -92,7 +92,7 @@
     background:#21c2de;
     border:solid 1px #21c2de;
     color: #ffffff;
-    border-radius: 5px;
+    /*border-radius: 5px;*/
     position:fixed;
     width: 40%;
     top: 0;
@@ -102,7 +102,7 @@
     float: left;
     /*background:url("../img/logol1.jpg")center no-repeat;*/
     width: 85%;
-    border-radius:5px;
+    /*border-radius:5px;*/
     height:50px;
     text-align: center;
     line-height: 50px;
@@ -438,7 +438,8 @@
      width: 60%;
     height:600px;
      float: right;
-     background:white;
+     background:url("../img/back4.png") no-repeat;
+    background-size: cover;
     overflow: hidden;
     position: relative;
  }
@@ -479,7 +480,7 @@
     display: none;
 }
 #contact_info{
-    width: 30%;
+    width: 40%;
     margin-top:10%;
     margin-left:10%;
     /*float: left;*/
@@ -524,11 +525,112 @@
     background-size: contain;
 }
 
-/*@media(max-width:1039px){*/
+@media(max-width:987px){
+    #nav{
+        width: 100%;
+    }
+    #background_word{
+        font-size:30px;
+    }
+    #intro2{
+        width: 100%;
+    }
+    #intro{
+        display: none;
+    }
+    #content{
+        width: 100%;
+    }
+    #services{
+        width:100%;
+    }
+    #skill{
+        width:100%;
+    }
+    #item{
+        width:100%;
+    }
+    #contact_me{
+        width: 100%;
+    }
+    #register{
+        width: 100%;
+    }
+
     /*#intro,#intro2{*/
         /*display:none;*/
     /*}*/
     /*#contend,#services,#skill,#item,#contact_me,#regiter{*/
         /*width: 100px;*/
     /*}*/
-/*}*/
+}
+@media(max-width: 769px){
+    #content #person{
+        width: 300px;
+    }
+}
+@media(max-width: 415px) {
+    #background {
+        width: 100%;
+        height: auto;
+    }
+
+    #background #background_list {
+        display: none;
+    }
+
+    #background #background_sorrn {
+        display: none;
+    }
+
+    #background_word {
+        font-size: 12px;
+    }
+
+    #nav {
+        height: 40px;
+    }
+
+    #nav #logol_one {
+        font-size: 15px;
+        height: 39px;
+        line-height: 39px;
+    }
+
+    #intro2 {
+        height: 40px;
+    }
+
+    #intro2 #item1, #item2, #item3, #item4, #item5, #item6 {
+        height: 40px;
+        width: 15%;
+        font-size:10px;
+        line-height: 40px;
+    }
+    #content #photo{
+        width: 150px;
+        height: 200px;
+    }
+    #content #person{
+        width: 100%;
+        margin:20px 10px;
+    }
+    .skill_spect .circle{
+        width:100%;
+    }
+    #content_item{
+        width: 100%;
+    }
+    #content_item .selected li {
+        width: 150px;
+        height: 200px;
+    }
+    #find_me #content_logol {
+        width: 100%;
+    }
+    #contact_info{
+        width: 100%;
+        margin:8px 8px;
+    }
+
+    }
